--- a/templatemo_509_hydro/css/templatemo-style.css
+++ b/templatemo_509_hydro/css/templatemo-style.css
@@ -86,7 +86,7 @@ http://www.templatemo.com/tm-509-hydro
   }
 
   a:hover, a:active, a:focus {
-    color: #ce3232;
+    color: #22adcd;
     outline: none;
   }
 
@@ -108,7 +108,7 @@ http://www.templatemo.com/tm-509-hydro
   }
 
   .section-btn {
-    background: #ce3232;
+    background: #22adcd;
     border: 0;
     border-radius: 100px;
     color: #ffffff;
@@ -122,17 +122,17 @@ http://www.templatemo.com/tm-509-hydro
 
   .section-btn:hover,
   .section-btn:focus {
-    background: #00F260;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #0575E6, #00F260);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #0575E6, #00F260); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #f6f6f6;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0575E6, #f6f6f6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0575E6, #f6f6f6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     border-color: transparent;
     color: #393939;
   }
 
   .overlay {
-    background: #00F260;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #0575E6, #00F260);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #0575E6, #00F260); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #f6f6f6;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0575E6, #f6f6f6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0575E6, #f6f6f6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     opacity: 0.7;
     position: absolute;
     width: 100%;
@@ -147,6 +147,8 @@ http://www.templatemo.com/tm-509-hydro
     padding-bottom: 80px;
     text-align: center;
   }
+
+
 
 
   /*---------------------------------------
@@ -258,7 +260,7 @@ http://www.templatemo.com/tm-509-hydro
 
   .custom-navbar .nav li a:hover {
     background: transparent;
-    color: #ce3232;
+    color: #22adcd;
   }
 
   .custom-navbar .navbar-nav > li > a:hover,
@@ -268,7 +270,7 @@ http://www.templatemo.com/tm-509-hydro
 
   .custom-navbar .nav li.active > a {
     background-color: transparent;
-    color: #ce3232;
+    color: #22adcd;
   }
 
   .custom-navbar .navbar-toggle {
@@ -319,7 +321,7 @@ http://www.templatemo.com/tm-509-hydro
   -----------------------------------------*/
 
   #home {
-    background: url('../images/home-bg.jpg') no-repeat center center;
+    background: whitesmoke;
     background-size: cover;
     vertical-align: middle;
     display: -webkit-box;
@@ -349,7 +351,7 @@ http://www.templatemo.com/tm-509-hydro
 
   .home-info .section-btn:hover,
   .home-info .section-btn:focus {
-    background: #ce3232;
+    background: #22adcd;
     border-color: transparent;
     color: #ffffff;
   }
@@ -366,7 +368,13 @@ http://www.templatemo.com/tm-509-hydro
     display: block;
   }
 
-
+  .home-video img {
+    display: block;
+    width: 100%;
+    height: auto;
+    border-radius: 10px; /* Adjust the value as needed */
+  }
+  
 
   /*---------------------------------------
       ABOUT              
