--- a/templatemo_509_hydro/css/templatemo-style.css
+++ b/templatemo_509_hydro/css/templatemo-style.css
@@ -533,6 +533,7 @@ http://www.templatemo.com/tm-509-hydro
     text-align: left;
     margin-bottom: 30px;
     height: 350px;
+    border-radius: 22px;
   }
 
   .media.blog-thumb .media-left {
