--- a/templatemo_509_hydro/css/templatemo-style.css
+++ b/templatemo_509_hydro/css/templatemo-style.css
@@ -453,7 +453,7 @@ http://www.templatemo.com/tm-509-hydro
     right: 0px;
     bottom: 0px;
     content: "";
-    background: #ce3232;
+    background: #22adcd;
     opacity: 0;
     transition: 0.5s;
   }
@@ -541,7 +541,7 @@ http://www.templatemo.com/tm-509-hydro
   }
 
   .blog-thumb small {
-    color: #ce3232;
+    color: #22adcd;
     font-weight: 500;
     display: block;
   }
@@ -576,9 +576,9 @@ http://www.templatemo.com/tm-509-hydro
   }
 
   .blog-info .section-btn:hover {
-    background: #00F260;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #0575E6, #00F260);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #0575E6, #00F260); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #f0f0f0;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0575E6, #f0f0f0);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0575E6, #f0f0f0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: #ffffff;
   }
 
@@ -616,7 +616,7 @@ http://www.templatemo.com/tm-509-hydro
   }
 
   .blog-social-share .btn-danger {
-    background: #dd4b39;
+    background: #22adcd;
   }
 
   .blog-social-share a .fa {
@@ -642,9 +642,9 @@ http://www.templatemo.com/tm-509-hydro
   -----------------------------------------*/
 
   #contact {
-    background: #00F260;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #0575E6, #00F260);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #0575E6, #00F260); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #f6f6f6;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0575E6, #f6f6f6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0575E6, #f6f6f6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   }
 
   #contact .section-title h2 {
@@ -686,7 +686,7 @@ http://www.templatemo.com/tm-509-hydro
   }
 
   #contact input[type='submit'] {
-    background: #ce3232;
+    background: #22adcd;
     border-radius: 100px;
     color: #ffffff;
     font-weight: 500;
@@ -785,7 +785,7 @@ http://www.templatemo.com/tm-509-hydro
   }
 
   .social-icon li a:hover {
-    color: #ce3232;
+    color: #22adcd;
   }
 
 
@@ -866,7 +866,7 @@ http://www.templatemo.com/tm-509-hydro
     color: #ffffff;
     background-color: transparent;
     border: none;
-    border-bottom: 1px solid #ce3232;
+    border-bottom: 1px solid #22adcd;
   }
 
   .modal-dialog .tab-content {
@@ -888,7 +888,7 @@ http://www.templatemo.com/tm-509-hydro
   }
 
   .modal-dialog form input[type="submit"] {
-    background: #ce3232;
+    background: #22adcd;
     border-color: transparent;
     border-radius: 100px;
     color: #ffffff;
