--- a/templatemo_509_hydro/css/templatemo-style.css
+++ b/templatemo_509_hydro/css/templatemo-style.css
@@ -652,28 +652,30 @@ http://www.templatemo.com/tm-509-hydro
   }
 
   .google-map {
-    border-radius: 100%;
-    width: 300px;
-    height: 300px;
+    border-radius: 15px;
+    width: 400px;
+    height: 400px;
     overflow: hidden;
     margin: 0 auto;
   }
 
   .google-map iframe {
     border: 0;
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
   }
 
   #contact .form-control {
     border: 0;
-    border-radius: 5px;
+    border-radius: 22px;
     box-shadow: none;
     color: rgba(20,20,20,0.5);
     font-size: 14px;
     font-weight: normal;
     margin-bottom: 15px;
+    margin-top: 15px;
     padding-left: 8px;
+    
   }
 
   #contact input,
