--- a/templatemo_509_hydro/css/templatemo-style.css
+++ b/templatemo_509_hydro/css/templatemo-style.css
@@ -92,6 +92,7 @@ http://www.templatemo.com/tm-509-hydro
 
   .section-title {
     margin-bottom: 60px;
+    text-align: center;
   }
 
   .section-title h2 {
